aggiunta transazione funzioante

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@ label {
   display: block;
   margin-top: 10px;
 }
+body{
+  background-color:"";
+}
+
 
 .card-container.card {
   max-width: 350px !important;
